Fixed burger menu on small windows

--- a/scss/_logo.scss
+++ b/scss/_logo.scss
@@ -23,7 +23,7 @@
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.5px;
-  font-size: 78px;
+  font-size: 68px;
 }
 .main-logo p {
   font-size: 24px;
@@ -36,4 +36,11 @@
   text-transform: uppercase;
   padding: 20px 60px 20px 60px;
   margin-top: 40px;
+}
+
+
+@media screen and (max-width: 766px) {
+  .logo {
+    margin-top: 50px;
+  }
 }
