--- a/scss/_ourwork.scss
+++ b/scss/_ourwork.scss
@@ -37,10 +37,20 @@
     width: 100%;
   }
 }
+.slider-images {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  img {
+    width: 250px;
+  }
+}
 .dots-our {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  width: 100%;
+  margin: 50px 0 50px 0;
   .dott {
     margin: 10px;
     border-radius: 50%;
